# compression-tool

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/compress0r/: CMakeLists.txt  core.hpp  encoder.cpp  encoder.hpp  frequency.cpp  frequency.hpp  huffman.cpp  huffman.hpp
test/: CMakeLists.txt  load_data.hpp  test_core_functionality.cpp  test_encode.cpp  test_huffman.cpp  test_main.cpp
