include(FetchContent)
FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
)
FetchContent_MakeAvailable(googletest)
include(GoogleTest)

add_executable(
  ${PROJECT_NAME}_test
  test_main.cpp
  )
target_link_libraries(
  ${PROJECT_NAME}_test
  GTest::gtest_main
  )

enable_testing()

add_test(
  NAME ${PROJECT_NAME}_test
  COMMAND ${PROJECT_NAME}_test
  )

#gtest_discover_tests(${PROJECT_NAME}_test)
